--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -1,4 +1,13 @@
-.container,
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100%;  
+  max-width: 1200px;
+}
+
 .cards-container {
   display: flex;
   flex-wrap: wrap;
@@ -54,7 +63,7 @@
   font-weight: bold;
 }
 
-body {
+body {  
   background: rgb(2, 0, 36);
   background: linear-gradient(
     0deg,
